--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=BioRhyme&amp;family=Space+Mono&amp;display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <title>TODOLIST-APP</title>
+  <link rel="stylesheet" href="./assets/fonts/Roboto/"
+  <title></title>
 </head>
 <body>
   <div class="app">
     <div class="todo-list">
       <h1 class="title">
-        TODOLIST - APP
+        To-Do List
       </h1>
       
       <form class="form" action="">
